--- a/satra/resrc/css1.css
+++ b/satra/resrc/css1.css
@@ -124,11 +124,7 @@ from, to {left:-300px; transform:scale(0.1);}
 	padding-left: 4vw;
 	float: left;
 }
-.contact2 {
-	width: 25%;
-	padding-left: 1vw;
-	float: left;
-}
+
 .embl {
 	margin-top: 1vh;
 	margin-bottom: 1vh;
@@ -140,9 +136,7 @@ from, to {left:-300px; transform:scale(0.1);}
 	background-clip: padding-box;
 	background-size: contain;
 }
-.contact2 .embl {
-	margin-bottom: 2vh;
-}
+
 #myEmail {
 	padding-top: 1.5vh;
 	padding-bottom: 1.5vh;
@@ -396,22 +390,39 @@ td:hover {transform:scale(1.2) skewY(-2deg);}
 	background-size: 100% 100%;
 }
 .footer1 {
-	width: 70%;
-	margin-top: 1vh;
+	padding-left: 2vw;
 	float: left;
-}
-.footer2 {
-	width: 25%;
-	margin-top: 3vh;
-	float: right;
-}
-.footer1 a, .footer2 a {color: rgba(30,180,240,1.00);}
-.footer1 a:hover, .footer2 a:hover {color: rgba(255,0,0,1.00);}
-.footer2 a {
-	margin-top: 2vh;
-	display: block;
+	padding-right: 2vw;
+	max-width: 25vw;
 	font-size: 2.5vh;
+	margin-top: 1vh;
+	width: auto;
 }
+.footer1 a {
+	color: rgba(30,180,240,1.00);
+	display: block;
+	margin-bottom: 0vw;
+}
+.footer1 a:hover {color: rgba(255,0,0,1.00);}
+
+.counter1 {
+	float: right;
+	margin-left: 2vw;
+	margin-right: 2vw;
+	font-size: 2vh;
+	margin-top: 3vh;
+}
+.counter1 caption {
+	font-weight: bold;
+}
+.counter1 th {
+	font-weight: normal;
+	text-align: left;
+}
+.counter1 td {
+	text-align: right;
+}
+
 
 
 #clt1 {color: rgba(30,180,240,1.00);}
