--- a/satra/resrc/css1.css
+++ b/satra/resrc/css1.css
@@ -40,13 +40,7 @@ a:hover {color: rgba(255,0,0,1.00);}
 	background-size: 100% 100%;
 	animation: header2 60s linear infinite;
 }
-@keyframes header2 {
-from {opacity: 1;}
-5% {opacity: 0;}
-55% {opacity: 0;}
-60% {opacity: 1;}
-to {opacity: 1;}
-}
+@keyframes header2 {from, to, 60% {opacity: 1;} 5%, 55% {opacity: 0;}}
 #logo {
 	width:40vh;
 	height: 28vh;
@@ -87,6 +81,7 @@ from, to {left:-300px; transform:scale(0.1);}
 }
 .ul1 li {
 	width: 25%;
+	margin-top: 1vh;
 	margin-left: 5%;
 	float: left;
 	font-size: 2.5vh;
@@ -95,9 +90,9 @@ from, to {left:-300px; transform:scale(0.1);}
 }
 .ul1 li:before {
 	content: "\2732";
+	display: block;
 	font-style: normal;
 	animation: ulli 4s linear infinite alternate;
-	display: block;
 }
 @keyframes ulli {
     0%  {color: rgba(30,180,240,1.00);}
@@ -114,9 +109,8 @@ from, to {left:-300px; transform:scale(0.1);}
 }
 .center2 {
 	width: 100%;
-	clear: both;
+	padding-top: 8vh;
 	float: left;
-	padding-top: 4vh;
 }
 
 .contact {
@@ -224,7 +218,9 @@ from, to {left:-300px; transform:scale(0.1);}
 
 .green1 {color: rgba(25,115,25,1.00);}
 .blue1 {color: rgba(30,180,240,1.00);}
-.blue2 {color: rgba(70,85,140,1.00);}
+.blue2 {
+	color: rgba(70,85,140,1.00);
+}
 .blue3 {color: rgba(40,130,200,1.00);}
 .blue4 {color: rgba(0,0,255,1.00);}
 .blue5 {color: rgba(210,230,250,1.00);}
@@ -258,7 +254,7 @@ from, to {left:-300px; transform:scale(0.1);}
 }
 .board {
 	width: 100%;
-	margin-top: 2vh;
+	margin-top: 4vh;
 	float: left;
 }
 .board img {
@@ -356,7 +352,6 @@ td:hover {transform:scale(1.2) skewY(-2deg);}
 #opinion {
 	width: 100%;
 	border-spacing: 5vw 4vh;
-	margin-top: 4vh;
 }
 #opinion td {
 	vertical-align: top;
@@ -390,18 +385,21 @@ td:hover {transform:scale(1.2) skewY(-2deg);}
 	background-size: 100% 100%;
 }
 .footer1 {
-	padding-left: 2vw;
-	float: left;
-	padding-right: 2vw;
-	max-width: 25vw;
-	font-size: 2.5vh;
-	margin-top: 1vh;
 	width: auto;
+	max-width: 25vw;
+	margin-top: 1vh;
+	margin-left: 1vw;
+	margin-right: 3vw;
+	float: left;
+	font-size: 2.5vh;
 }
 .footer1 a {
 	color: rgba(30,180,240,1.00);
 	display: block;
-	margin-bottom: 0vw;
+}
+.footer1 > a {
+	margin-top: 1vh;
+	margin-left: 2vw;
 }
 .footer1 a:hover {color: rgba(255,0,0,1.00);}
 
@@ -409,11 +407,15 @@ td:hover {transform:scale(1.2) skewY(-2deg);}
 	float: right;
 	margin-left: 2vw;
 	margin-right: 2vw;
-	font-size: 2vh;
 	margin-top: 3vh;
+	font-size: 2vh;
+	border-collapse: separate;
+	border-spacing: 1vw 1vh;
+	border: 0.5vh solid rgba(30,180,240,0.2);
 }
 .counter1 caption {
 	font-weight: bold;
+	padding-bottom: 1vh;
 }
 .counter1 th {
 	font-weight: normal;
