--- a/satra/resrc/css1.css
+++ b/satra/resrc/css1.css
@@ -1,14 +1,22 @@
 @charset "utf-8";
 
+
+@font-face {
+	font-family: 'FontAwesome';
+	src: url('../fonts/fontawesome-webfont.eot') format('embedded-opentype'),
+	url('../fonts/fontawesome-webfont.woff2') format('woff2'),
+	url('../fonts/fontawesome-webfont.woff') format('woff'),
+	url('../fonts/fontawesome-webfont.ttf') format('truetype'),
+	url('../fonts/fontawesome-webfont.svg') format('svg');
+}
 @font-face {
 font-family: 'CMTK';
-src: url('../fonts/CMTK.eot') format('embedded-opentype'),
+	src: url('../fonts/CMTK.eot') format('embedded-opentype'),
 	url('../fonts/CMTK.woff2') format('woff2'),
 	url('../fonts/CMTK.woff') format('woff'),
 	url('../fonts/CMTK.ttf') format('truetype'),
 	url('../fonts/CMTK.svg') format('svg');
 }
-
 * {
 	margin: 0;
 	padding: 0;
@@ -19,10 +27,22 @@ body {
 	color: rgba(10,30,120,1);
 	background-color: rgba(30,180,240,0.1);
 	cursor: default;
-	letter-spacing: 1px;
 }
 a {color: rgba(10,30,120,1);}
 a:hover {color: rgba(255,0,0,1.00);}
+
+.blink {animation: blink 5s linear infinite alternate; color: rgba(192,0,3,1.00);}
+@keyframes blink {from {opacity: 1;} to {opacity: 0;}}
+.green1 {color: rgba(25,115,25,1.00);}
+.blue1 {color: rgba(30,180,240,1.00);}
+.blue2 {color: rgba(70,85,140,1.00);}
+.blue3 {color: rgba(40,130,200,1.00);}
+.blue4 {color: rgba(0,0,255,1.00);}
+.blue5 {color: rgba(210,230,250,1.00);}
+.yellow1 {color: rgba(255,255,0,1.00);}
+.red1 {	color: rgba(180,7,7,1.00);}
+.beige1 {color: rgba(245,245,220,1.00);}
+.purple1 {color: rgba(200,0,130,1.00);}
 
 .header {
 	width: 100%;
@@ -34,7 +54,6 @@ a:hover {color: rgba(255,0,0,1.00);}
 	background-size: 100% 100%;
 }
 #header2 {
-	width: 100%;
 	height: 100%;
 	background-image: url(../imgs/fon2.png);
 	background-size: 100% 100%;
@@ -78,34 +97,30 @@ from, to {left:-300px; transform:scale(0.1);}
 	0 0 10px rgba(0,0,255,1.00),
 	0 0 15px rgba(0,0,255,1.00),
 	0 0 20px rgba(0,0,255,1.00);
+	background-image:
+	linear-gradient(0deg,rgba(0,0,255,1.0) 0%,rgba(0,0,255,0.20) 20%,rgba(0,0,255,0.20) 80%, rgba(0,0,255,0.7) 100%),
+	url(../imgs/3.png);
+	background-size: 100% 100%;
 }
 .ul1 li {
 	width: 25%;
-	margin-top: 1vh;
 	margin-left: 5%;
 	float: left;
 	font-size: 2.5vh;
 	text-align: center;
 	list-style-type: none;
 }
-.ul1 li:before {
-	content: "\2732";
-	display: block;
-	font-style: normal;
-	animation: ulli 4s linear infinite alternate;
-}
-@keyframes ulli {
-    0%  {color: rgba(30,180,240,1.00);}
-    100%  {color: rgba(255,0,255,1.00);}
-}
 
 .center {
-	width: 75%;
+	width: 70%;
+	padding-top: 2vh;
 	float: left;
 }
-.sideright {
+.side {
+	width: 30%;
+	padding-top: 2vh;
+	padding-left: 3vw;
 	float: left;
-	width: 40%;
 }
 .center2 {
 	width: 100%;
@@ -113,58 +128,32 @@ from, to {left:-300px; transform:scale(0.1);}
 	float: left;
 }
 
-.contact {
-	width: 25%;
-	padding-left: 4vw;
-	float: left;
-}
-
+.contact {padding-bottom:2vh;float:left;}
+.embl, .embl2 {	margin-right:1vw; float:left; font-size:2.5vh;}
 .embl {
-	margin-top: 1vh;
-	margin-bottom: 1vh;
-	padding-top: 1vh;
-	padding-bottom: 1vh;
-	padding-left: 5vw;
-	font-size: 2.5vh;
-	background-repeat: no-repeat;
-	background-clip: padding-box;
-	background-size: contain;
+	margin-left:1vw;
+	padding-top:1vh;
+	padding-bottom:1vh;
+	padding-left:4vw;
+	background-repeat:no-repeat;
+	background-clip:padding-box;
+	background-size:contain;
 }
-
-#myEmail {
-	padding-top: 1.5vh;
-	padding-bottom: 1.5vh;
-	background-image: url(../imgs/embl/email1.png);
-}
-#myPhone {
-	background-image: url(../imgs/embl/phone.png);
-}
-#myVK {
-	padding-top: 1.2vh;
-	padding-bottom: 1.2vh;
-	background-image: url(../imgs/embl/vk.png);
-}
-#RF {
-	background-image: url(../imgs/embl/flagRF.png);
-}
-#Chel {
-	background-image: url(../imgs/embl/flagChel.png);
-}
+.RF {background-image:url(../imgs/embl/flagRF.png);}
+.Chel {background-image:url(../imgs/embl/flagChel.png);}
 
 #order1 {
-	width: 22vw;
-	margin-top: 2vh;
+	width: 24vw;
 	position: relative;
-	float: right;
 	border: 1.0vh solid rgba(80,160,200,0.6);
 	border-top-left-radius: 10vh;
 	border-top-right-radius: 10vh;
 	box-shadow: inset 0px 0px 10px rgba(30,180,240,0.00);
 	transition: 2s 0.5s;
 	background-color: rgba(240,240,250,1.00);
-	margin-right: 1vw;
+	margin-left: 1vw;
 }
-#order1:hover {z-index:10; transform:translate(-170%,-50%) scale(1.2);}
+#order1:hover {z-index:10; transform:translateX(-170%) scale(1.2);}
 #order1:not(:hover) {transition: 2s 2s;}
 .order3, .order4 {
 	width: 100%;
@@ -181,27 +170,22 @@ from, to {left:-300px; transform:scale(0.1);}
 #order1:hover .order4 {opacity:1;}
 @keyframes order4 {from {opacity:0;} to {opacity:1;}}
 
-#name, #email, #phone, #msg, #send {
-	width: 96%;
+#order2 input, #msg {
+	width: 18vw;
 	margin-bottom: 1vh;
-	margin-left: 2%;
+	margin-top: 1vh;
 	padding-top: 1vh;
 	padding-right: 1vh;
 	padding-bottom: 1vh;
 	padding-left: 1vh;
 	color: rgba(70,85,140,1.00);
 	font-size: 2.5vh;
-	background-repeat: no-repeat;
-	background-size: contain;
-	border: solid rgba(80,160,200,1);
+	border: 0.2vh solid rgba(80,160,200,1);
 }
-#email {
-	text-indent: 3vw;
-	background-image: url(../imgs/embl/email1.png);
-}
-#phone {
-	text-indent: 3vw;
-	background-image: url(../imgs/embl/phone.png);
+#order2 label {
+	color: rgba(80,160,200,1);
+	display: inline-block;
+	width: 2vw;
 }
 #msg {
 	height: 20vh;
@@ -209,53 +193,24 @@ from, to {left:-300px; transform:scale(0.1);}
 	font-family: Arial, Calibri, Cambria;
 }
 #send {
-	cursor: pointer;
+	font-weight: bold;
 	border-radius: 2vw;
 	background-image: linear-gradient(0deg,rgba(80,160,200,0.5) 0%,rgba(80,160,200,0.1) 70%);
-	font-weight: bold;
+	cursor: pointer;
 }
 #send:hover {color:rgba(255,0,0,1.00)}
-
-.green1 {color: rgba(25,115,25,1.00);}
-.blue1 {color: rgba(30,180,240,1.00);}
-.blue2 {
-	color: rgba(70,85,140,1.00);
-}
-.blue3 {color: rgba(40,130,200,1.00);}
-.blue4 {color: rgba(0,0,255,1.00);}
-.blue5 {color: rgba(210,230,250,1.00);}
-.yellow1 {color: rgba(255,0,253,1.00);}
-.red1 {	color: rgba(180,7,7,1.00);}
-.beige1 {color: rgba(245,245,220,1.00);}
-.purple1 {color: rgba(200,0,130,1.00);}
-.backbl2 {background-color: rgba(230,230,230,1.00);}
-.backbl3 {background-color: rgba(212,216,217,1.00);}
-.backbl2 {background-color: rgba(30,180,240,0.5);}
-.backbl3 {background-color: rgba(30,180,240,0.20);}
-.backred2 {background-color: rgba(250,0,0,0.50);}
-.backred3 {background-color: rgba(250,0,0,0.20);}
-.backgr2 {background-color: rgba(0,200,0,0.50);}
-.backgr3 {background-color: rgba(0,200,0,0.20);}
-
-.back-img1 {
-	background-image:
-	linear-gradient(0deg,rgba(0,0,255,1.0) 0%,rgba(0,0,255,0.20) 20%,rgba(0,0,255,0.20) 80%, rgba(0,0,255,0.7) 100%),
-	url(../imgs/3.png);
-	background-size: 100% 100%;
-}
-
 
 .name2 {
 	position: relative;
 	font-size: 3.5vh;
 	font-weight: bold;
 	text-align: center;
-	background-image: linear-gradient(90deg,rgba(30,180,240,0.5) 0%, rgba(10,30,120,1),rgba(30,180,240,0.5));
+	background-image: linear-gradient(90deg,rgba(30,180,240,0.5),rgba(10,30,120,1),rgba(30,180,240,0.5));
 }
 .board {
 	width: 100%;
-	margin-top: 4vh;
 	float: left;
+	margin-bottom: 4vh;
 }
 .board img {
 	height: 12vh;
@@ -269,6 +224,7 @@ from, to {left:-300px; transform:scale(0.1);}
 	transition: 1s 0.3s;
 	cursor: pointer;
 	margin-right: 1vw;
+	margin-bottom: 1vh;
 }
 .board > img:hover {z-index:1; transform: scale(4);}
 
@@ -383,31 +339,16 @@ td:hover {transform:scale(1.2) skewY(-2deg);}
 	url(../imgs/fon3.png);
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
+	margin-top: 4vh;
+	padding-top: 2vh;
 }
-.footer1 {
-	width: auto;
-	max-width: 25vw;
-	margin-top: 1vh;
-	margin-left: 1vw;
-	margin-right: 3vw;
-	float: left;
-	font-size: 2.5vh;
-}
-.footer1 a {
-	color: rgba(30,180,240,1.00);
-	display: block;
-}
-.footer1 > a {
-	margin-top: 1vh;
-	margin-left: 2vw;
-}
-.footer1 a:hover {color: rgba(255,0,0,1.00);}
-
+.footer .side > a {display:block; margin-bottom:1vh; color:rgba(30,180,240,1.00);}
+.footer .side a {color:rgba(30,180,240,1.00);}
+.footer .side a:hover {color:rgba(255,0,0,1.00);}
 .counter1 {
 	float: right;
 	margin-left: 2vw;
 	margin-right: 2vw;
-	margin-top: 3vh;
 	font-size: 2vh;
 	border-collapse: separate;
 	border-spacing: 1vw 1vh;
@@ -428,7 +369,6 @@ td:hover {transform:scale(1.2) skewY(-2deg);}
 
 
 #clt1 {color: rgba(30,180,240,1.00);}
-
 #clttxt {
 	width: 100%;
 	height: 20vh;
@@ -453,10 +393,34 @@ td:hover {transform:scale(1.2) skewY(-2deg);}
 	border: solid rgba(30,180,240,0.4);
 }
 
-.blink {animation: blink 5s linear infinite alternate; color: rgba(192,0,3,1.00);}
-@keyframes blink {from {opacity: 1;} to {opacity: 0;}}
+
 
 #opinion tr td img {
 	display: block;
 	height: 20vh;
 }
+
+.icon {
+	margin-right: 1vw;
+	margin-left: 1vw;
+	font-family: FontAwesome, monospace;
+	font-size: 4vh;
+	text-align: center;
+	vertical-align: middle;
+}
+.comment:before {content: "\f27a";}
+.cog:before {content: "\f085";}
+.lightbulb:before {content: "\f0eb";animation: lightbulb 4s linear infinite alternate;}
+.mail:before {content: "\f0e0";}
+.mail2:before {content: "\f003";}
+.mobile:before {content: "\f10b";}
+.phone:before {content: "\f095";}
+.plane:before {content: "\f072";}
+.question-o:before {content: "\f29c";}
+.rub:before {content: "\f158";}
+.text:before {content: "\f0f6";}
+.vk:before {content: "\f189";}
+.user:before {content: "\f007";}
+.spin {animation:spin 2s infinite linear;}
+.pulse {animation:fa-spin 1s infinite steps(8);}
+@keyframes spin {0% {transform:rotate(0deg);} 100% {transform:rotate(359deg);}}
