--- a/satra/resrc/css1.css
+++ b/satra/resrc/css1.css
@@ -121,6 +121,7 @@ from, to {left:-300px; transform:scale(0.1);}
 	padding-top: 2vh;
 	padding-left: 3vw;
 	float: left;
+	font-size: 2.5vh;
 }
 .center2 {
 	width: 100%;
@@ -129,7 +130,10 @@ from, to {left:-300px; transform:scale(0.1);}
 }
 
 .contact {padding-bottom:2vh;float:left;}
-.embl, .embl2 {	margin-right:1vw; float:left; font-size:2.5vh;}
+.embl, .embl2 {
+	margin-right: 1vw;
+	float: left;
+}
 .embl {
 	margin-left:1vw;
 	padding-top:1vh;
@@ -230,15 +234,11 @@ from, to {left:-300px; transform:scale(0.1);}
 
 
 td:empty {visibility: hidden;}
-.side2 caption {
-	padding-bottom: 2vh;
-	font-size: 4vh;
-	font-weight: bold;
-}
-.side1 caption,.side3 caption, #opinion caption {
+
+.side1 caption,.side2 caption,.side3 caption,#opinion caption {
 	padding-top: 2vh;
 	padding-bottom: 2vh;
-	font-size: 3.0vh;
+	font-size: 4vh;
 	font-weight: bold;
 }
 .side1 {
@@ -251,7 +251,7 @@ td:empty {visibility: hidden;}
 	width: 70%;
 	margin-left: 15%;
 	float: left;
-	border-collapse: collapse;
+	border-spacing: 1vw 1vh;
 }
 .side3 {
 	width: 50%;
@@ -332,7 +332,6 @@ td:hover {transform:scale(1.2) skewY(-2deg);}
 }
 
 .footer {
-	width: 100%;
 	height: 28vh;
 	float: left;
 	background-image: linear-gradient(0deg, rgba(10,30,120,0.5)0%, rgba(30,180,240,0.8) 100%),
@@ -342,8 +341,15 @@ td:hover {transform:scale(1.2) skewY(-2deg);}
 	margin-top: 4vh;
 	padding-top: 2vh;
 }
-.footer .side > a {display:block; margin-bottom:1vh; color:rgba(30,180,240,1.00);}
-.footer .side a {color:rgba(30,180,240,1.00);}
+.footer .side > a {
+	display: block;
+	margin-bottom: 1vh;
+	color: rgba(30,180,240,1.00);
+	margin-left: 10vw;
+}
+.footer .side a {
+	color: rgba(30,180,240,1.00);
+}
 .footer .side a:hover {color:rgba(255,0,0,1.00);}
 .counter1 {
 	float: right;
@@ -380,7 +386,7 @@ td:hover {transform:scale(1.2) skewY(-2deg);}
 	color: rgba(70,85,140,1.00);
 	font-size: 2.5vh;
 	text-align: center;
-	border: solid rgba(30,180,240,0.4);
+	border: 0.5vh solid rgba(30,180,240,0.4);
 }
 #cltbut {
 	color: rgba(70,85,140,1.00);
@@ -390,7 +396,7 @@ td:hover {transform:scale(1.2) skewY(-2deg);}
 	padding-bottom: 2vh;
 	padding-left: 2vh;
 	margin-left: 40%;
-	border: solid rgba(30,180,240,0.4);
+	border: 0.5vh solid rgba(30,180,240,0.4);
 }
 
 
@@ -422,5 +428,7 @@ td:hover {transform:scale(1.2) skewY(-2deg);}
 .vk:before {content: "\f189";}
 .user:before {content: "\f007";}
 .spin {animation:spin 2s infinite linear;}
+.spinY {animation:spinY 2s infinite linear;}
 .pulse {animation:fa-spin 1s infinite steps(8);}
 @keyframes spin {0% {transform:rotate(0deg);} 100% {transform:rotate(359deg);}}
+@keyframes spinY {0% {transform:rotateY(0deg);} 100% {transform:rotateY(359deg);}}
